# modular-midi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blackmagic.md  build.ps1  lv_conf.h.old  rtt.md  setup.md
projects/hub-master/: CMakeLists.txt  FreeRTOSConfig.h  lv_conf.h  main.cpp
shared/: CMakeLists.txt  dma_callback.h  freertos_support.cpp  freertos_support.h
shared/hal/rp2350/: AsyncLogger.cpp  AsyncLogger.h  SEGGER_RTT_Conf.h  display.cpp  display.h  st7789.cpp  st7789.h
src/: CMakeLists.txt
src/projects/hub-master/: CMakeLists.txt  FreeRTOSConfig.h  flash_and_run.gdb  lv_conf.h  main.cpp
src/shared/: CMakeLists.txt  button.h  i_pin.h
src/shared/event/: event_common.h
src/shared/hal/: CmakeLists.txt
src/shared/hal/rp2350/: AsyncLogger.cpp  CMakeLists.txt  async_logger.cpp  display.cpp  display.h  pin.h  st7789.cpp  st7789.h
src/shared/services/: CMakeLists.txt  button_payload.h  button_service.cpp  button_service.h
tools/: flash.jlink  ozone.jdebug  tools.md
